--- a/aisolutions.html
+++ b/aisolutions.html
@@ -42,7 +42,7 @@ text-align: center;
                <h1 style="text-align: center;color: red;font-family: 'Permanent Marker', cursive;">SPOT ON.</h1>
             </div></div>
             <div class="container">
-            <div class="w">
+            <div class="w"><br><br>
 <P style="color: white;padding-left: 20%;padding-right: 20%;">Over the past 21 years, a.i. solutions has served as both prime and sub-contractor for many Government, Defense, Civil and Commercial contracts providing high-quality products and services to our customers. We have proven expertise in aerospace engineering and a dedicated focus on our care capabilities with the necessary infrastructure to successfully manage large contracts and achieve mission success. Our long-term relationships with our customers  are built on trust, maintaining a reputation as a reliable partner who gets the job done. We are proud to have earned excellent ratings and top achievement awards as both prime and sub-contractor, demonstrating our commitment to deliver what we promise. As we continue to refine our approach and design innovative solutions that exceed customer expectations, a.i. solutions is committed to deliver - </P>
 <b style="color: white;">Smarter Approaches. Better Results.  </b><b style="color: red;">SPOT ON.</b><br><BR>
 <div class="container" style="padding-left: 17%;padding-right: 17%;">
